create button's layout

--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
+    <div class="calculator">
+        <div class="screen">0</div>
+        <div class="buttons-grid">
+            <button style="grid-column: span 2;" class="big-key">CLEAR</button>
+            <button style="grid-column: span 2;" class="big-key">DELETE</button>
+            <button class="num-key">7</button>
+            <button class="num-key">8</button>
+            <button class="num-key">9</button>
+            <button class="ope-key">÷</button>
+            <button class="num-key">4</button>
+            <button class="num-key">5</button>
+            <button class="num-key">6</button>
+            <button class="ope-key">×</button>
+            <button class="num-key">1</button>
+            <button class="num-key">2</button>
+            <button class="num-key">3</button>
+            <button class="ope-key">−</button>
+            <button class="num-key">.</button>
+            <button class="num-key">0</button>
+            <button class="num-key">=</button>
+            <button class="ope-key">+</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
