button layout fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="calculator">
-        <div class="screen">0</div>
+        <div class="screen">
+            <div class="default-display">0</div>
+        </div>
         <div class="buttons-grid">
             <button style="grid-column: span 2;" class="big-key">CLEAR</button>
             <button style="grid-column: span 2;" class="big-key">DELETE</button>
