add logic for basic case

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <button class="num-key">1</button>
             <button class="num-key">2</button>
             <button class="num-key">3</button>
-            <button class="ope-key">−</button>
+            <button class="ope-key">-</button>
             <button class="num-key">.</button>
             <button class="num-key">0</button>
-            <button class="num-key">=</button>
+            <button class="num-key" id="equal">=</button>
             <button class="ope-key">+</button>
         </div>
     </div>
