--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <button class="ope-key">-</button>
             <button class="num-key">.</button>
             <button class="num-key">0</button>
-            <button class="num-key" id="equal">=</button>
+            <button id="equal">=</button>
             <button class="ope-key">+</button>
         </div>
     </div>
