add clearKey logic

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="default-display">0</div>
         </div>
         <div class="buttons-grid">
-            <button style="grid-column: span 2;" class="big-key">CLEAR</button>
-            <button style="grid-column: span 2;" class="big-key">DELETE</button>
+            <button style="grid-column: span 2;" class="big-key" id="clear-key">CLEAR</button>
+            <button style="grid-column: span 2;" class="big-key" id="delete-key">DELETE</button>
             <button class="num-key">7</button>
             <button class="num-key">8</button>
             <button class="num-key">9</button>
